# C-Trie

./: CMakeLists.txt
example/: main.c
include/: trie.h
src/: main.c
